[project]
name = "iis-vaje"
version = "0.1.0"
description = "Vaje za predmet Inženirstvo Inteligentnih Sistemov"
authors = [
    {name = "DavidBalazic",email = "davidbalazic31@hotmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "numpy (>=1.2.4,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "lxml (>=5.3.2,<6.0.0)",
    "pyaml (>=25.1.0,<26.0.0)",
    "great-expectations (==0.18.21)",
    "evidently (>=0.7.5,<0.8.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
